; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-udp-dgram-too-big.c_send_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-udp-dgram-too-big.c_send_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@UV_EMSGSIZE = common dso_local global i32 0, align 4
@close_cb = common dso_local global i32 0, align 4
@send_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @send_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_cb(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @CHECK_REQ(%struct.TYPE_4__* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = call i32 @CHECK_HANDLE(i64 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @UV_EMSGSIZE, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to i32*
  %20 = load i32, i32* @close_cb, align 4
  %21 = call i32 @uv_close(i32* %19, i32 %20)
  %22 = load i32, i32* @send_cb_called, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @send_cb_called, align 4
  ret void
}

declare dso_local i32 @CHECK_REQ(%struct.TYPE_4__*) #1

declare dso_local i32 @CHECK_HANDLE(i64) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
